Fix KV storage for user sessions
- Added --kv=KV flag to wrangler pages dev command
- Without this flag, KV storage wasn't persisting user sessions
- Fixed in both ecosystem.config.cjs and package.json dev:sandbox script
- This fixes the redirect to / after login issue

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -14,7 +14,8 @@
   "kv_namespaces": [
     {
       "binding": "KV",
-      "id": "opencase-kv"
+      "id": "opencase-kv",
+      "preview_id": "opencase-kv-preview"
     }
   ],
   "vars": {
